# posei_data

./: MANIFEST.in  Makefile  README.md  commit_test.txt  main.py  pylintrc  pyproject.toml  setup.py  tox.ini
docs/: analysis.md
ibapi/: account_summary_tags.py  client.py  comm.py  commission_report.py  common.py  connection.py  const.py  contract.py  decoder.py  enum_implem.py  errors.py  execution.py  ineligibility_reason.py  message.py  news.py  object_implem.py  order.py  order_cancel.py  order_condition.py  order_state.py  orderdecoder.py  reader.py  scanner.py  server_versions.py  softdollartier.py  tag_value.py  ticktype.py  utils.py  wrapper.py
src/: config.py
src/analysis/: impact.py  liquidity.py  microstructure.py  orderflow.py  spread.py  volume_profile.py  vwap.py
src/analytics/: api.py  correlation.py  drawdown.py  pnl.py  risk.py
src/market/: calendar.py  crypto_adapter.py  ohlcv.py  replay.py  tick_store.py
src/multi/: clustering.py  cointegration.py  correlation.py  cross_market.py  factors.py  pairs.py  pca.py  regime.py  sectors.py  spread_monitor.py  statarb.py
src/pipeline/: batch.py  core.py  monitor.py  schema.py  streaming.py  validation.py
src/realtime/: compress.py  orderbook.py  trades.py  ws_feed.py
tests/: bench_analytics.py  manual.py  test_comm.py  test_enum_implem.py  test_microstructure.py  test_multi_asset.py  test_pipeline.py  test_utils.py
