# Posei Data: Configuration update
[tool.poetry]
name = "nautilus_ibapi"
version = "10.30.01"
description="Python IB API"
authors = ["IBG LLC <dnastase@interactivebrokers.com>"]
readme = "README.md"
repository = "https://interactivebrokers.github.io/tws-api"
license = "IB API Non-Commercial License or the IB API Commercial License"
include = ["ibapi/**/*"]
packages = [{include = "ibapi"}]
# Posei Data: Enhanced contract matching for Posei Data accuracy

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Posei Data: Code update - 20251231155945

# Posei Data: Code update - 20251231161258

# Posei Data: Code update - 20251231161301